src/containers/Dashboard.scss
$mobile-breakpoint: 900px;

.dashboard-page {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: scroll;

  @media (min-width: $mobile-breakpoint) {
    flex-direction: row;
  }
}

.organize-box-col {
  flex-shrink: 0;
  padding: 1rem;

  @media (min-width: $mobile-breakpoint) {
    padding: 2rem;
    min-width: 350px;
    width: 350px;
  }
}

.appts-col {
  flex-basis: 75%;
  padding: 1rem;

  @media (min-width: $mobile-breakpoint) {
    padding: 2rem 2rem 2rem 0;
    height: calc(100% - 4rem);
    overflow: auto;
  }
}

.appts-container {
  height: 100%;
  display: grid;
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-columns: repeat(1, 1fr);

  @media (min-width: 1200px) {
    grid-template-columns: repeat(2, 1fr);
  }
}

